More visual fixes on mobile

--- a/client-side/src/styles/MessageArea.css
+++ b/client-side/src/styles/MessageArea.css
@@ -5,6 +5,7 @@
 
 .comments {
     overflow-y: auto;
+    width: 70%;
 }
 
 .segment {
@@ -14,5 +15,11 @@
 @media only screen and (max-width: 767px) {
     .comments.segment {
         width: 100% !important;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    .container.chat {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
     }
 }
